--- a/src/components/Button/Button.scss
+++ b/src/components/Button/Button.scss
@@ -6,6 +6,7 @@
   gap: 8px;
   padding: 16px;
   border-radius: 8px;
+  color: var(--color-text);
   border: 1px solid currentColor;
   background-color: transparent;
   flex: 1;
