--- a/src/components/Footer/Footer.scss
+++ b/src/components/Footer/Footer.scss
@@ -2,6 +2,7 @@
   text-align: center;
   font-size: 1rem;
   line-height: 1.5rem;
+  color: var(--color-text);
 
   &__link {
     color: var(--color-brand);
