--- a/src/components/MovieListItem/MovieListItem.scss
+++ b/src/components/MovieListItem/MovieListItem.scss
@@ -2,6 +2,7 @@
   text-align: left;
   display: flex;
   gap: 16px;
+  color: var(--color-text);
 
   &__image {
     height: 170px;
@@ -15,7 +16,7 @@
   }
 
   &__title {
-    font-size: 1.5rem;
+    font-size: 1rem;
     line-height: normal;
     margin: 0;
     display: -webkit-box;
@@ -35,11 +36,11 @@
   }
 
   &__summary {
-    font-size: 1rem;
+    font-size: 0.875rem;
     margin: 0;
     display: -webkit-box;
-    line-clamp: 4;
-    -webkit-line-clamp: 4;
+    line-clamp: 5;
+    -webkit-line-clamp: 5;
     -webkit-box-orient: vertical;
     overflow: hidden;
   }
