Fixed dark colors variables

--- a/src/App.scss
+++ b/src/App.scss
@@ -1,8 +1,9 @@
 :root {
   --color-white: #ffffff;
-  --color-black: #242424;
+  --color-black: #000000;
+  --color-dark: #242424;
   --color-text: var(--color-white);
-  --color-bg: var(--color-black);
+  --color-bg: var(--color-dark);
   --color-brand: #f6a122;
   --color-main: #fd267a;
   --color-second: #ff6036;
